; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_jsonb_gin.c_jsonb_path_ops__extract_nodes.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_jsonb_gin.c_jsonb_path_ops__extract_nodes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32, i32*, i32*)* @jsonb_path_ops__extract_nodes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @jsonb_path_ops__extract_nodes(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  store i32 %1, i32* %11, align 4
  store i32* %0, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %24

14:                                               ; preds = %4
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %10, align 4
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @JsonbHashScalarValue(i32* %17, i32* %10)
  %19 = load i32*, i32** %9, align 8
  %20 = load i32, i32* %10, align 4
  %21 = call i32 @UInt32GetDatum(i32 %20)
  %22 = call i32 @make_jsp_entry_node(i32 %21)
  %23 = call i32* @lappend(i32* %19, i32 %22)
  store i32* %23, i32** %5, align 8
  br label %26

24:                                               ; preds = %4
  %25 = load i32*, i32** %9, align 8
  store i32* %25, i32** %5, align 8
  br label %26

26:                                               ; preds = %24, %14
  %27 = load i32*, i32** %5, align 8
  ret i32* %27
}

declare dso_local i32 @JsonbHashScalarValue(i32*, i32*) #1

declare dso_local i32* @lappend(i32*, i32) #1

declare dso_local i32 @make_jsp_entry_node(i32) #1

declare dso_local i32 @UInt32GetDatum(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
